=== What's New in 2.7 Since 2.6

This section covers the changes made from version 2.6 to version 2.7.
For changes in earlier version, see <<history>>.

[[x27-kafka-client]]
==== Kafka Client Version

This version requires the 2.7.0 `kafka-clients`.

[[x-27-nonblock-retry]]
==== Non-Blocking Delayed Retries Using Topics

This significant new feature is added in this release.
When strict ordering is not important, failed deliveries can be sent to another topic to be consumed later.
A series of such retry topics can be configured, with increasing delays.
See <<retry-topic>> for more information.

[[x27-container]]
==== Listener Container Changes

The `onlyLogRecordMetadata` container property is now `true` by default.

A new container property `stopImmediate` is now available.

See <<container-props>> for more information.

Error handlers that use a `BackOff` between delivery attempts (e.g. `SeekToCurrentErrorHandler` and `DefaultAfterRollbackProcessor`) will now exit the back off interval soon after the container is stopped, rather than delaying the stop.
See <<after-rollback>> and <<seek-to-current>> for more information.

Error handlers and after rollback processors that extend `FailedRecordProcessor` can now be configured with one or more `RetryListener` s to receive information about retry and recovery progress.

See See <<after-rollback>>, <<seek-to-current>>, and <<recovering-batch-eh>> for more information.

The `RecordInterceptor` now has additional methods called after the listener returns (normally, or by throwing an exception).
It also has a sub-interface `ConsumerAwareRecordInterceptor`.
In addition, there is now a `BatchInterceptor` for batch listeners.
See <<message-listener-container>> for more information.

[[x27-listener]]
==== `@KafkaListener` Changes

You can now validate the payload parameter of `@KafkaHandler` methods (class-level listeners).
See <<kafka-validation>> for more information.
